# source/api/api.yaml
@@ -37,6 +37,30 @@ paths:
             type: string
             minLength: 1
             maxLength: 64
+        - name: RateLimit-Limit
+          in: header
+          description: Total number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 1
+            maximum: 50
+        - name: RateLimit-Remaining
+          in: header
+          description: Remaining number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 50
+        - name: RateLimit-Reset
+          in: header
+          description: Time in seconds before rate limiting resets
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 3600
       responses:
         '200':
           description: Player summary retrieved successfully
@@ -61,6 +85,14 @@ paths:
                 type: string
                 example: Unable to Handle Request
 
+        '429':
+          description: Rate Limiting
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
+
   /steam/{id}/recently-played:
     summary: Steam Recently Played
     get:
@@ -76,6 +108,30 @@ paths:
             type: string
             minLength: 1
             maxLength: 64
+        - name: RateLimit-Limit
+          in: header
+          description: Total number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 1
+            maximum: 50
+        - name: RateLimit-Remaining
+          in: header
+          description: Remaining number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 50
+        - name: RateLimit-Reset
+          in: header
+          description: Time in seconds before rate limiting resets
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 3600
       responses:
         '200':
           description: Player recent played retrieved successfully
@@ -100,6 +156,14 @@ paths:
                 type: string
                 example: Unable to Handle Request
 
+        '429':
+          description: Rate Limiting
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
+
   /steam/{id}/summary/svg:
     summary: Steam Recently Played SVG
     get:
@@ -115,6 +179,30 @@ paths:
             type: string
             minLength: 1
             maxLength: 64
+        - name: RateLimit-Limit
+          in: header
+          description: Total number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 1
+            maximum: 50
+        - name: RateLimit-Remaining
+          in: header
+          description: Remaining number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 50
+        - name: RateLimit-Reset
+          in: header
+          description: Time in seconds before rate limiting resets
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 3600
       responses:
         '200':
           description: Player recent played retrieved successfully
@@ -140,12 +228,45 @@ paths:
                 type: string
                 example: Unable to Handle Request
 
+        '429':
+          description: Rate Limiting
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
+
   /catto:
     summary: Random Cat Images
     get:
       operationId: get-cat-images
       description: Fetch Cat Images
       tags: [image]
+      parameters:
+        - name: RateLimit-Limit
+          in: header
+          description: Total number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 1
+            maximum: 50
+        - name: RateLimit-Remaining
+          in: header
+          description: Remaining number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 50
+        - name: RateLimit-Reset
+          in: header
+          description: Time in seconds before rate limiting resets
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 3600
       responses:
         '200':
           description: Cat image retrieved successfully
@@ -163,12 +284,45 @@ paths:
                 type: string
                 example: Unable to Handle Request
 
+        '429':
+          description: Rate Limiting
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
+
   /doggo:
     summary: Random Dog Images
     get:
       operationId: get-dog-images
       description: Fetch Dog Images
       tags: [image]
+      parameters:
+        - name: RateLimit-Limit
+          in: header
+          description: Total number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 1
+            maximum: 50
+        - name: RateLimit-Remaining
+          in: header
+          description: Remaining number of tries possible
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 50
+        - name: RateLimit-Reset
+          in: header
+          description: Time in seconds before rate limiting resets
+          required: true
+          schema:
+            type: number
+            minimum: 0
+            maximum: 3600
       responses:
         '200':
           description: Dog image retrieved successfully
@@ -185,6 +339,14 @@ paths:
               schema:
                 type: string
                 example: Unable to Handle Request
+
+        '429':
+          description: Rate Limiting
+          content:
+            application/json:
+              schema:
+                type: string
+                example: 'You have exceeded number of requests, Try again later!'
 
   /health:
     summary: API health
